fix: Fix compilation errors across multiple test files
AdminDashboardIntegrationTest.java:
- Fix stuck threshold parameter names (stuckThresholdPending -> pendingThresholdMinutes)

AdminDashboardServiceTest.java:
- Fix SystemStatusDto methods (getStatus -> getOverallStatus)
- Fix type conversions (Double to Integer for latency/load)
- Fix ActiveOrdersDto builder methods (orderNumber -> externalOrderNo)
- Fix StuckOrdersDto methods (criticalCount -> stuckPending)
- Fix FinanceMetricsDto payouts (BigDecimal -> PayoutSummaryDto)

CustomerExperienceAnalyticsControllerTest.java:
- Fix rating metric method names (foodQualityAvg -> averageFoodQualityRating)

CustomerExperienceAnalyticsIntegrationTest.java:
- Fix tipAmount type (BigDecimal -> Double)
- Fix SupportTicket builder methods (type -> ticketType, csatScore -> customerSatisfactionScore)

CustomerExperienceAnalyticsServiceTest.java:
- Fix RestaurantRatingMetricsDto method names
- Fix CourierRatingMetricsDto method names

FinancialAnalyticsIntegrationTest.java:
- Fix CourierPaymentType enum value (PER_DELIVERY -> DELIVERY)
- Fix PromotionUsage field names (promotionCode -> promoCode)

FraudAnalyticsIntegrationTest.java:
- Fix type conversion (double to int for parameter)
- Fix method name (getDeviceFraudMetrics -> getDeviceFraud)

FraudAnalyticsServiceTest.java:
- Fix collector.collect() method signatures
- Fix ReferralFraudMetricsDto field names

TechnicalAnalyticsIntegrationTest.java:
- Fix HttpRequestLog field (requestTimestamp -> timestamp)
- Fix SlowQueryLog field (executedAt -> timestamp)
- Remove non-existent fields from BackupLog and StorageMetadata

PersistentNotificationServiceTest.java:
- Fix List type inference issue with Collections.singletonList